<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BG Video Recorder</string>
    <string name="start_recording">Start Recording</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="recording_active">● Recording…</string>
    <string name="ready_to_record">Ready to record</string>
    <string name="tap_to_record">Tap to record</string>
    <string name="view_recordings">My Recordings</string>
    <string name="my_recordings">My Recordings</string>
    <string name="settings">Settings</string>
    <string name="record">Record</string>
    <string name="widget_hint">Add the widget to your home screen\nto record without opening the app</string>
    <string name="no_recordings">No recordings yet.\nTap Record to get started.</string>
    <string name="recording_started">Recording started</string>
    <string name="recording_saved">Recording saved</string>
    <string name="open_with">Open with…</string>
    <string name="share_recording">Share recording</string>
    <string name="delete_recording">Delete Recording</string>
    <string name="delete_confirm">Are you sure you want to delete this recording?</string>
    <string name="delete">Delete</string>
    <string name="play">Play</string>
    <string name="share">Share</string>
    <string name="camera_icon">Camera</string>
    <string name="video_file">Video file</string>
    <string name="permissions_required">Permissions Required</string>
    <string name="permissions_rationale">Camera and microphone access are needed to record video. Storage permission is needed to save recordings.</string>
    <string name="grant">Grant</string>
    <string name="widget_description">Background Video Recorder Widget</string>
</resources>
